Translation updated by Ivar Smolin.
2006-08-24  Priit Laes  <plaes@cvs.gnome.org>

	* et.po: Translation updated by Ivar Smolin.

--- a/po/et.po
+++ b/po/et.po
@@ -16,7 +16,7 @@ msgstr ""
 "Project-Id-Version: nautilus HEAD\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-08-11 00:23+0200\n"
-"PO-Revision-Date: 2006-08-14 20:44+0300\n"
+"PO-Revision-Date: 2006-08-24 10:30+0300\n"
 "Last-Translator: Ivar Smolin <okul@linux.ee>\n"
 "Language-Team: Estonian <gnome-et@linux.ee>\n"
 "MIME-Version: 1.0\n"
@@ -330,6 +330,10 @@ msgid ""
 "If set to \"search_by_text_and_properties\", then Nautilus will search for "
 "files by file name and file properties."
 msgstr ""
+"Otsingutulemuste filtreerimiskriteerium. Kui väärtuseks on määratud "
+"\"search_by_text\", siis otsib Nautilus faile ainult failinime alusel. Kui "
+"väärtuseks on määratud \"search_by_text_and_properties\", siis otsib "
+"Nautilus faile failinime ja faili omaduste alusel."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:6
 msgid "Current Nautilus theme (deprecated)"
@@ -4212,6 +4216,9 @@ msgid ""
 "attempting to locate the factory.Killing bonobo-activation-server and "
 "restarting Nautilus may help fix the problem."
 msgstr ""
+"Nautilust pole hetkel võimalik Bonobo ootamatu vea tõttu kasutada. Viga "
+"tekkis factory asukoha määramise katsel. Bonobo-activation-server'i "
+"kõrvaldamine ja Nautiluse taaskäivitamine võib aidata vea kõrvaldamisel."
 
 #: ../src/nautilus-application.c:604
 msgid ""
@@ -5474,11 +5481,11 @@ msgstr "Sulgeb kõik kataloogiaknad"
 
 #: ../src/nautilus-throbber.c:514
 msgid "throbber"
-msgstr ""
+msgstr "tuksuja"
 
 #: ../src/nautilus-throbber.c:515
 msgid "provides visual status"
-msgstr ""
+msgstr "visuaalse oleku tagamine"
 
 #: ../src/nautilus-window-bookmarks.c:94
 msgid ""
