Updated Catalan translation.

--- a/po/ca.po
+++ b/po/ca.po
@@ -11,8 +11,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: nautilus 2.9.91\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2006-08-23 21:20+0200\n"
-"PO-Revision-Date: 2006-08-23 21:42+0200\n"
+"POT-Creation-Date: 2006-08-25 01:03+0200\n"
+"PO-Revision-Date: 2006-08-25 01:07+0200\n"
 "Last-Translator: Jordi Mallach <jordi@sindominio.net>\n"
 "Language-Team: Catalan <tradgnome@softcatala.org>\n"
 "MIME-Version: 1.0\n"
@@ -793,7 +793,7 @@ msgstr ""
 "Reducció de velocitat per a quan es previsualitza el contingut d'un fitxer "
 "de text a la icona del fitxer. Si s'estableix a «always», sempre es mostra "
 "la previsualització, encara que la carpeta sigui a un servidor remot. Si "
-"s'estableix a «local_only» aleshores només es mostran les previsualitzacions "
+"s'estableix a «local_only» aleshores només es mostren les previsualitzacions "
 "de fitxers que estiguin en sistemes de fitxers locals. Si s'estableix a "
 "«never», no es llegiran mai les dades de previsualització."
 
@@ -1357,7 +1357,7 @@ msgstr "S'ha produït un error en crear l'enllaç a «%s»."
 #: ../libnautilus-private/nautilus-file-operations.c:810
 #: ../libnautilus-private/nautilus-file-operations.c:821
 msgid "You do not have permissions to write to this folder."
-msgstr "No teniu permisos per a escriure a aquesta carpeta."
+msgstr "No teniu permís per a escriure a aquesta carpeta."
 
 #: ../libnautilus-private/nautilus-file-operations.c:803
 #: ../libnautilus-private/nautilus-file-operations.c:814
@@ -4151,7 +4151,7 @@ msgstr "Crear i suprimir fitxers"
 
 #: ../src/file-manager/fm-properties-window.c:3597
 msgid "Read-only"
-msgstr "Sols-lectura"
+msgstr "Només-lectura"
 
 #: ../src/file-manager/fm-properties-window.c:3599
 msgid "Read and write"
@@ -5218,7 +5218,7 @@ msgstr "La ubicació de l'historial no existeix."
 
 #: ../src/nautilus-navigation-window-menus.c:426
 msgid "_Go"
-msgstr "_Vés"
+msgstr "Vé_s"
 
 #. name, stock id, label
 #: ../src/nautilus-navigation-window-menus.c:427
@@ -5825,9 +5825,9 @@ msgid ""
 "FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more "
 "details."
 msgstr ""
-"El Nautilus es distribueix amb la intenció de ser útil, però SENSE CAP "
-"GARANTIA; ni tan sols la garantia implícita de COMERCIABILITAT o ADEQUACIÓ "
-"PER A UNA FINALITAT DETERMINADA. Consulteu la Llicència Pública General de "
+"El Nautilus es distribueix amb l'esperança que sigui útil, però SENSE CAP "
+"GARANTIA; ni tan sols la garantia implícita de COMERCIALITZACIÓ o ADEQUACIÓ "
+"PER A CAP FINALITAT DETERMINADA. Consulteu la Llicència Pública General de "
 "GNU per a més informació."
 
 #: ../src/nautilus-window-menus.c:431
@@ -5837,8 +5837,8 @@ msgid ""
 "Place, Suite 330, Boston, MA  02111-1307  USA"
 msgstr ""
 "Amb el Nautilus heu d'haver rebut una còpia de la Llicència Pública General "
-"de GNU; si no és així, escriviu a la Free Software Foundation, Inc., Temple "
-"Place - Suite 330, Boston, MA  02111, USA."
+"de GNU; si no és així, escriviu a la Free Software Foundation, Inc., 59 "
+"Temple Place, Suite 330, Boston, MA  02111-1307 USA"
 
 #: ../src/nautilus-window-menus.c:450
 msgid ""
@@ -5877,7 +5877,7 @@ msgstr "_Edita"
 #. name, stock id, label
 #: ../src/nautilus-window-menus.c:599
 msgid "_View"
-msgstr "Vi_sualitza"
+msgstr "_Visualitza"
 
 #. name, stock id, label
 #: ../src/nautilus-window-menus.c:600
