Handle enter activation when using typeahead search (#334928) Patch from
2006-08-25  Alexander Larsson  <alexl@redhat.com>

	* src/file-manager/fm-list-view.c:
	Handle enter activation when using typeahead search (#334928)
	Patch from Nelson Benitez

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2006-08-25  Alexander Larsson  <alexl@redhat.com>
+
+	* src/file-manager/fm-list-view.c:
+	Handle enter activation when using typeahead search (#334928)
+	Patch from Nelson Benitez
+
 2006-08-23  Alexander Larsson  <alexl@redhat.com>
 
 	* libnautilus-private/nautilus-directory-private.h:
