--- a/po/et.po
+++ b/po/et.po
@@ -16,7 +16,7 @@ msgstr ""
 "Project-Id-Version: nautilus HEAD\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-08-11 00:23+0200\n"
-"PO-Revision-Date: 2006-08-24 10:30+0300\n"
+"PO-Revision-Date: 2006-08-25 17:44+0300\n"
 "Last-Translator: Ivar Smolin <okul@linux.ee>\n"
 "Language-Team: Estonian <gnome-et@linux.ee>\n"
 "MIME-Version: 1.0\n"
@@ -313,7 +313,7 @@ msgstr ""
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:2
 msgid "Always use the location entry, instead of the pathbar"
-msgstr ""
+msgstr "Rajariba asemel alati asukohakirje kasutamine"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:3
 msgid "Computer icon visible on desktop"
@@ -485,6 +485,8 @@ msgid ""
 "If set to true, then Nautilus browser windows will always use a textual "
 "input entry for the location toolbar, instead of the pathbar."
 msgstr ""
+"Kui märgitud, siis Nautiluse sirvimisaknad kasutavad asukoha tööribal "
+"rajariba asemel alati tekstilist sisendit."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:39
 msgid ""
@@ -2485,10 +2487,11 @@ msgid ""
 "Nautilus shell operations that can be done from subsequent command-line "
 "invocations"
 msgstr ""
+"Nautiluse kestatoimingud, mis täidetakse väljakutsutava käsurea abil"
 
 #: ../src/Nautilus_shell.server.in.h:6
 msgid "Produces metafile objects for accessing Nautilus metadata"
-msgstr ""
+msgstr "Nautiluse metaandmetele ligipääsuks metafailiobjektide tegemine"
 
 #: ../src/file-manager/fm-desktop-icon-view.c:617
 msgid "Background"
