Translation updated by Ivar Smolin.
2006-08-28  Priit Laes  <plaes@cvs.gnome.org>

	* et.po: Translation updated by Ivar Smolin.

--- a/po/et.po
+++ b/po/et.po
@@ -16,7 +16,7 @@ msgstr ""
 "Project-Id-Version: nautilus HEAD\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-08-11 00:23+0200\n"
-"PO-Revision-Date: 2006-08-25 17:44+0300\n"
+"PO-Revision-Date: 2006-08-27 11:49+0300\n"
 "Last-Translator: Ivar Smolin <okul@linux.ee>\n"
 "Language-Team: Estonian <gnome-et@linux.ee>\n"
 "MIME-Version: 1.0\n"
@@ -785,7 +785,7 @@ msgstr ""
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:88
 msgid "The default width of the side pane in new windows."
-msgstr ""
+msgstr "Uutes akendes külgpaani vaikimisi laius."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:89
 msgid "The font description used for the icons on the desktop."
@@ -796,6 +796,8 @@ msgid ""
 "The format of file dates. Possible values are \"locale\", \"iso\", and "
 "\"informal\"."
 msgstr ""
+"Failide kuupäevade vorming. Võimalikud väärtused on \"locale\", \"iso\", ja "
+"\"informal\"."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:91
 msgid "The side pane view to show in newly opened windows."
@@ -2334,7 +2336,7 @@ msgstr "Sisselogimine nurjus."
 #: ../libnautilus-private/nautilus-program-choosing.c:605
 #: ../src/nautilus-window-manage-views.c:1467
 msgid "Access was denied."
-msgstr "Juurdepääs oli keelatud."
+msgstr "Ligipääs oli keelatud."
 
 #: ../libnautilus-private/nautilus-program-choosing.c:610
 #: ../src/nautilus-window-manage-views.c:1478
@@ -2924,12 +2926,12 @@ msgstr "_Omadused"
 #. label, accelerator
 #: ../src/file-manager/fm-directory-view.c:6769
 msgid "View or modify the properties of each selected item"
-msgstr "Vaatab või muudab iga valitud kirje omadusi"
+msgstr "Valitud kirje omaduste vaatamine või muutmine"
 
 #. label, accelerator
 #: ../src/file-manager/fm-directory-view.c:6777
 msgid "View or modify the properties of the open folder"
-msgstr "Vaatab või muudab avatud kataloogi omadusi"
+msgstr "Avatud kataloogi omaduste vaatamine või muutmine"
 
 #. name, stock id
 #: ../src/file-manager/fm-directory-view.c:6780
@@ -3925,7 +3927,7 @@ msgstr ""
 
 #: ../src/file-manager/fm-properties-window.c:3119
 msgid "list"
-msgstr "loend"
+msgstr "loendi võtmine"
 
 #: ../src/file-manager/fm-properties-window.c:3121
 msgid "read"
@@ -3941,19 +3943,19 @@ msgstr "kirjutamine"
 
 #: ../src/file-manager/fm-properties-window.c:3141
 msgid "access"
-msgstr "juurdepääs"
+msgstr "ligipääs"
 
 #: ../src/file-manager/fm-properties-window.c:3189
 msgid "Access:"
-msgstr "Juurdepääs:"
+msgstr "Ligipääs:"
 
 #: ../src/file-manager/fm-properties-window.c:3191
 msgid "Folder Access:"
-msgstr "Kausta juurdepääs:"
+msgstr "Kausta ligipääs:"
 
 #: ../src/file-manager/fm-properties-window.c:3193
 msgid "File Access:"
-msgstr "Faili juurdepääs:"
+msgstr "Faili ligipääs:"
 
 #: ../src/file-manager/fm-properties-window.c:3205
 #: ../src/file-manager/fm-properties-window.c:3216
@@ -3967,7 +3969,7 @@ msgstr "Ainult failide loendile"
 
 #: ../src/file-manager/fm-properties-window.c:3210
 msgid "Access files"
-msgstr "Juurdepääs failidele"
+msgstr "Ligipääs failidele"
 
 #: ../src/file-manager/fm-properties-window.c:3212
 msgid "Create and delete files"
@@ -4153,6 +4155,8 @@ msgid ""
 "The location of the desktop directory has changed in GNOME 2.4. You can open "
 "the link and move over the files you want, then delete the link."
 msgstr ""
+"Töölauakataloogi asukoht on alates GNOME 2.4-st muutunud. Sa või avada viida "
+"ja tõsta soovitud failid ümber ja siis viida kustutada."
 
 #. Can't register myself due to trouble locating the
 #. * Nautilus_Shell.server file. This has happened when you
