--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-08-29  Subhransu Behera  <arya_subhransu@yahoo.co.in>
+
+	* or.po: Updated Oriya Translation.
+
 2006-08-28  Subhransu Behera  <arya_subhransu@yahoo.co.in>
 
 	* or.po: Updated Oriya Translation.
