2006-08-31 Jovan Naumovski <jovanna@cvs.gnome.org> * mk.po: Updated Macedonian translation

--- a/po/mk.po
+++ b/po/mk.po
@@ -26,8 +26,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: nautilus.HEAD.mk\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2006-08-30 10:01+0200\n"
-"PO-Revision-Date: 2006-08-30 17:52+0200\n"
+"POT-Creation-Date: 2006-08-30 21:59+0200\n"
+"PO-Revision-Date: 2006-08-31 00:13+0200\n"
 "Last-Translator: Jovan Naumovski <jovan@lugola.net>\n"
 "Language-Team: Macedonian <ossm-members@hedona.on.net.mk>\n"
 "MIME-Version: 1.0\n"
@@ -3244,7 +3244,7 @@ msgstr ""
 #. name, stock id
 #: ../src/file-manager/fm-directory-view.c:6876
 msgid "Connect To This Server"
-msgstr "Воспостави врска со овој сервер"
+msgstr "Врзи се со овој сервер"
 
 #. label, accelerator
 #: ../src/file-manager/fm-directory-view.c:6877
@@ -4499,7 +4499,7 @@ msgstr "_Име за оваа врска:"
 
 #: ../src/nautilus-connect-server-dialog.c:805
 msgid "Connect to Server"
-msgstr "Воспостави врска со серверот"
+msgstr "Врзи се со сервер"
 
 #: ../src/nautilus-connect-server-dialog.c:822
 msgid "Service _type:"
