--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-08-31  Ani Peter  <peter.ani@hotmail.com>
+
+	* ml.po: Updated Malayalam translation
+
 2006-08-31  Rajesh Ranjan <rajeshkajha@yahoo.com>
 
         * hi.po: Updated Hindi Translation.
