--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-08-31  Duarte Loreto <happyguy_pt@hotmail.com>
+
+	* pt.po: Updated Portuguese translation.
+
 2006-08-31  Ani Peter  <peter.ani@hotmail.com>
 
 	* ml.po: Updated Malayalam translation
