2006-09-01 Jovan Naumovski <jovanna@cvs.gnome.org> * mk.po: Updated Macedonian translation

--- a/po/mk.po
+++ b/po/mk.po
@@ -26,8 +26,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: nautilus.HEAD.mk\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2006-08-30 21:59+0200\n"
-"PO-Revision-Date: 2006-08-31 00:13+0200\n"
+"POT-Creation-Date: 2006-08-31 11:44+0200\n"
+"PO-Revision-Date: 2006-09-01 01:17+0200\n"
 "Last-Translator: Jovan Naumovski <jovan@lugola.net>\n"
 "Language-Team: Macedonian <ossm-members@hedona.on.net.mk>\n"
 "MIME-Version: 1.0\n"
@@ -3239,7 +3239,7 @@ msgstr "Ресетирај го погледот на _стандардно"
 msgid "Reset sorting order and zoom level to match preferences for this view"
 msgstr ""
 "Ресетирај го редоследот и нивото на зум така што ќе се вколпи во "
-"преференците за овој поглед"
+"преференциите за овој поглед"
 
 #. name, stock id
 #: ../src/file-manager/fm-directory-view.c:6876
@@ -4761,7 +4761,7 @@ msgstr "Приказ"
 
 #: ../src/nautilus-file-management-properties.glade.h:48
 msgid "File Management Preferences"
-msgstr "Преференци за работа со датотеки"
+msgstr "Преференции за работа со датотеки"
 
 #: ../src/nautilus-file-management-properties.glade.h:49
 msgid "I_nclude a Delete command that bypasses Trash"
@@ -5042,8 +5042,8 @@ msgid ""
 "Do not manage the desktop (ignore the preference set in the preferences "
 "dialog)."
 msgstr ""
-"Не ја средувај работната околина (игнорирај ги преференците во дијалогот на "
-"преференци)."
+"Не ја средувај работната околина (игнорирај ги преференциите во дијалогот на "
+"преференции)."
 
 #: ../src/nautilus-main.c:217
 msgid "open a browser window."
@@ -5819,7 +5819,7 @@ msgstr "Префе_ренци"
 
 #: ../src/nautilus-window-menus.c:611
 msgid "Edit Nautilus preferences"
-msgstr "Уреди ги преференците за Nautilus"
+msgstr "Уреди ги преференциите за Nautilus"
 
 #: ../src/nautilus-window-menus.c:613
 msgid "_Undo"
