Updated Malayalam translation

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+
+2006-09-01  Ani Peter <peter.ani@gmail.com>
+
+	* ml.po: Updated Malayalam translation
+
 2006-09-01  Jovan Naumovski  <jovan@lugola.net>
 
 	* mk.po: Updated Macedonian translation.
