*** empty log message ***

--- a/po/nl.po
+++ b/po/nl.po
@@ -6045,7 +6045,7 @@ msgstr "Naar de prullenbak-map gaan"
 #. name, stock id
 #: ../src/nautilus-window-menus.c:687
 msgid "CD/_DVD Creator"
-msgstr "CD/_DVD-werkplaats"
+msgstr "CD/_DVD-maker"
 
 #. label, accelerator
 #: ../src/nautilus-window-menus.c:688
