--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-09-04  I. Felix <ifelix25@gmail.com>
+
+	* ta.po: Updated Tamil Translation.
+
 2006-09-01  Maxim Dziumanenko <dziumanenko@gmail.com>
 
 	* uk.po: Update Ukrainian translation.
