Translation updated by Reinout van Schouwen.
2006-09-04  Vincent van Adrighem  <adrighem@gnome.org>

	* nl.po: Translation updated by Reinout van Schouwen.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-09-04  Vincent van Adrighem  <adrighem@gnome.org>
+
+	* nl.po: Translation updated by Reinout van Schouwen.
+
 2006-09-04  I. Felix <ifelix25@gmail.com>
 
 	* ta.po: Updated Tamil Translation.
