--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2006-09-04  Alexander Larsson  <alexl@redhat.com>
+
+	* configure.in:
+	Bump version to 2.16.0
+
+	* NEWS:
+	Update for release
+
 2006-08-25  Alexander Larsson  <alexl@redhat.com>
 
 	* src/file-manager/fm-list-view.c:
