--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+Major changes in 2.16.0 are:
+* Handle enter activation when using typeahead search
+* Avoid using gnome_vfs_is_local in wrong places
+* Translations
+
 Major changes in 2.15.92.1 are:
 * Fix crash on startup
 
