--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-09-04  Kostas Papadimas <pkst@gnome.org>
+
+	* el.po: Updated  Greek translation.
+
 2006-09-04  Vincent van Adrighem  <adrighem@gnome.org>
 
 	* nl.po: Translation updated by Reinout van Schouwen.
