--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-09-04  Runa Bhattacharjee <runabh@gmail.com>
+
+	* bn_IN.po: Fixed Fuzzies and changed accelerator keys to English.
+
 2006-09-04  Kostas Papadimas <pkst@gnome.org>
 
 	* el.po: Updated  Greek translation.
