--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-09-04  Abel Cheung  <abel@oaka.org>
+
+	* zh_HK.po: Updated Chinese (Hong Kong) translation.
+	* zh_TW.po: Updated Chinese (Taiwan) translation.
+
 2006-09-04  Runa Bhattacharjee <runabh@gmail.com>
 
 	* bn_IN.po: Fixed Fuzzies and changed accelerator keys to English.
