Updated Brazilian Portuguese translation by Evandro Fernandes Giovanini
2006-09-05  Lucas Rocha  <lucasr@gnome.org>

	* pt_BR.po: Updated Brazilian Portuguese translation
	by Evandro Fernandes Giovanini <efgiovanini@gmail.com>.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-09-05  Lucas Rocha  <lucasr@gnome.org>
+
+	* pt_BR.po: Updated Brazilian Portuguese translation
+	by Evandro Fernandes Giovanini <efgiovanini@gmail.com>.
+
 2006-09-04  Abel Cheung  <abel@oaka.org>
 
 	* zh_HK.po: Updated Chinese (Hong Kong) translation.
