Updated Greek translation

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-09-06  Simos Xenitellis  <simos@gnome.org>
+
+	* el.po: Fixed typo, noted by Konstantinos Togias.
+
 2006-09-05  Lucas Rocha  <lucasr@gnome.org>
 
 	* pt_BR.po: Updated Brazilian Portuguese translation
