--- a/po/vi.po
+++ b/po/vi.po
@@ -584,7 +584,7 @@ msgstr "Nếu đặt là true, một biểu tượng liên kết với thư mụ
 msgid ""
 "If this is set to true, an icon linking to the trash will be put on the "
 "desktop."
-msgstr "Nếu đặt là true thì biểu tượng liên kết với Sọt Rác sẽ được đặt lên màn hình "
+msgstr "Nếu đặt là true thì biểu tượng liên kết với Sọt rác sẽ được đặt lên màn hình "
 "nền."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:52
@@ -836,7 +836,7 @@ msgstr "Có thể đặt tên nếu bạn muốn tự chọn tên cho biểu tư
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:95
 msgid "Trash icon visible on desktop"
-msgstr "Hiện Sọt Rác trên màn hình nền"
+msgstr "Hiện Sọt rác trên màn hình nền"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:96
 msgid "Type of click used to launch/open files"
@@ -1590,7 +1590,7 @@ msgstr "Đang chuyển"
 
 #: ../libnautilus-private/nautilus-file-operations.c:2098
 msgid "Preparing to Move to Trash..."
-msgstr "Đang chuẩn bị cho vào Sọt Rác..."
+msgstr "Đang chuẩn bị cho vào Sọt rác..."
 
 #.localizers: progress dialog title
 #: ../libnautilus-private/nautilus-file-operations.c:2104
@@ -1776,7 +1776,7 @@ msgstr "Nếu bạn đổ rác, mọi thứ trong sọt rác sẽ bị xoá vĩn
 
 #: ../libnautilus-private/nautilus-file-operations.c:2862
 msgid "_Empty Trash"
-msgstr "Đổ _Rác"
+msgstr "Đổ _rác"
 
 #: ../libnautilus-private/nautilus-file-utilities.c:75
 #: ../libnautilus-private/nautilus-query.c:135
@@ -2520,14 +2520,14 @@ msgstr "Trình diễn một cửa sổ cho phép bạn tạo mẫu hay màu củ
 #.label, accelerator
 #: ../src/file-manager/fm-desktop-icon-view.c:706
 msgid "Empty Trash"
-msgstr "Đổ Rác"
+msgstr "Đổ rác"
 
 #.tooltip
 #.label, accelerator
 #: ../src/file-manager/fm-desktop-icon-view.c:708
 #: ../src/file-manager/fm-directory-view.c:6819
 msgid "Delete all items in the Trash"
-msgstr "Xóa bỏ mọi mục trong Sọt Rác"
+msgstr "Xóa bỏ mọi mục trong Sọt rác"
 
 #: ../src/file-manager/fm-desktop-icon-view.c:797
 #: ../src/nautilus-desktop-window.c:246
@@ -2695,7 +2695,7 @@ msgstr "Không thể chuyển tập tin vào sọt rác, bạn có muốn xóa b
 #: ../src/file-manager/fm-directory-view.c:3789
 #, c-format
 msgid "The file \"%s\" cannot be moved to the trash."
-msgstr "Không thể cho tập tin « %s » vào Sọt Rác."
+msgstr "Không thể cho tập tin « %s » vào Sọt rác."
 
 #: ../src/file-manager/fm-directory-view.c:3793
 msgid "Cannot move items to trash, do you want to delete them immediately?"
@@ -3090,7 +3090,7 @@ msgstr "Thay đổi tên của mục đã chọn"
 #: ../src/file-manager/fm-directory-view.c:7714
 #: ../src/file-manager/fm-directory-view.c:8103
 msgid "Mo_ve to Trash"
-msgstr "Chuyển _vào Rác"
+msgstr "Cho _vào Sọt rác"
 
 #.label, accelerator
 #: ../src/file-manager/fm-directory-view.c:6865
@@ -3287,7 +3287,7 @@ msgstr[0] "_Duyệt thư mục"
 #: ../src/file-manager/fm-directory-view.c:7526
 #: ../src/file-manager/fm-directory-view.c:7710
 msgid "_Delete from Trash"
-msgstr "_Xóa bỏ khỏi Rác"
+msgstr "_Xóa khỏi Sọt rác"
 
 #: ../src/file-manager/fm-directory-view.c:7527
 msgid "Delete the open folder permanently"
@@ -3295,7 +3295,7 @@ msgstr "Xóa bỏ hoàn toàn thư mục được mở"
 
 #: ../src/file-manager/fm-directory-view.c:7531
 msgid "Move the open folder to the Trash"
-msgstr "Di chuyển thư mục được mở vào Sọt Rác"
+msgstr "Di chuyển thư mục được mở vào Sọt rác"
 
 #: ../src/file-manager/fm-directory-view.c:7666
 #, c-format
@@ -4077,7 +4077,7 @@ msgstr "Tạo thư mục"
 
 #: ../src/file-manager/fm-tree-view.c:1174
 msgid "Move to Trash"
-msgstr "Chuyển vào Rác"
+msgstr "Chuyển vào Sọt rác"
 
 #: ../src/file-manager/fm-tree-view.c:1238
 #: ../src/nautilus-places-sidebar.c:259
@@ -4571,7 +4571,7 @@ msgstr "Luôn mở trong cửa sổ d_uyệt"
 
 #: ../src/nautilus-file-management-properties.glade.h:36
 msgid "Ask before _emptying the Trash or deleting files"
-msgstr "_Hỏi trước khi đổ Rác hoặc xóa bỏ tập tin"
+msgstr "_Hỏi trước khi đổ rác hoặc xóa bỏ tập tin"
 
 #: ../src/nautilus-file-management-properties.glade.h:37
 msgid "Behavior"
@@ -4619,7 +4619,7 @@ msgstr "Tùy Thích Quản Lý Tập Tin"
 
 #: ../src/nautilus-file-management-properties.glade.h:49
 msgid "I_nclude a Delete command that bypasses Trash"
-msgstr "Bao gồm lệ_nh xóa bỏ không đi qua Rác"
+msgstr "Bao gồm lệ_nh xóa bỏ không đi qua Sọt rác"
 
 #: ../src/nautilus-file-management-properties.glade.h:50
 msgid ""
@@ -4842,7 +4842,7 @@ msgstr "Không thể khởi chạy trình ghi đĩa CD."
 #.FIXME: We don't use spaces to pad labels!
 #: ../src/nautilus-information-panel.c:1046
 msgid "Empty _Trash"
-msgstr "Đổ _Rác"
+msgstr "Đổ _rác"
 
 #.FIXME: We don't use spaces to pad labels!
 #: ../src/nautilus-information-panel.c:1062
