Translation updated by Ivar Smolin.
2006-09-08  Priit Laes  <plaes@cvs.gnome.org>

	* et.po: Translation updated by Ivar Smolin.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-09-08  Priit Laes  <plaes@cvs.gnome.org>
+
+	* et.po: Translation updated by Ivar Smolin.
+
 2006-09-06  Simos Xenitellis  <simos@gnome.org>
 
 	* el.po: Fixed typo, noted by Konstantinos Togias.
