--- a/po/et.po
+++ b/po/et.po
@@ -16,7 +16,7 @@ msgstr ""
 "Project-Id-Version: nautilus HEAD\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-08-11 00:23+0200\n"
-"PO-Revision-Date: 2006-08-27 11:49+0300\n"
+"PO-Revision-Date: 2006-09-08 12:25+0300\n"
 "Last-Translator: Ivar Smolin <okul@linux.ee>\n"
 "Language-Team: Estonian <gnome-et@linux.ee>\n"
 "MIME-Version: 1.0\n"
@@ -46,7 +46,7 @@ msgstr "Kare sinine"
 
 #: ../data/browser.xml.h:6
 msgid "Blue Type"
-msgstr "Sinine tüüp"
+msgstr "Sinakad kirjad"
 
 #: ../data/browser.xml.h:7
 msgid "Brushed Metal"
@@ -62,7 +62,7 @@ msgstr "Kotiriie"
 
 #: ../data/browser.xml.h:10
 msgid "C_olors"
-msgstr "_Värvid"
+msgstr "_Värvused"
 
 #: ../data/browser.xml.h:11
 msgid "Camouflage"
@@ -110,7 +110,7 @@ msgstr "Täpid"
 
 #: ../data/browser.xml.h:22
 msgid "Drag a color to an object to change it to that color"
-msgstr "Objekti värvi muutmiseks lohista värv objektile"
+msgstr "Objekti värvuse muutmiseks lohista värv objektile"
 
 #: ../data/browser.xml.h:23
 msgid "Drag a pattern tile to an object to change it"
@@ -124,19 +124,20 @@ msgstr "Objekti embleemi lisamiseks lohista see objektile"
 msgid "Eclipse"
 msgstr "Varjutus"
 
+#. siin mõeldakse värvust ja see tuleneb väljendist "green with envy"
 #: ../data/browser.xml.h:26
 msgid "Envy"
-msgstr "Kadedus"
+msgstr "Tumeroheline"
 
 #. translators: this is the name of an emblem
 #: ../data/browser.xml.h:28 ../src/nautilus-emblem-sidebar.c:937
 #: ../src/nautilus-property-browser.c:1795
 msgid "Erase"
-msgstr "Kustuta"
+msgstr "Kustutada"
 
 #: ../data/browser.xml.h:29
 msgid "Fibers"
-msgstr "Fiiber"
+msgstr "Kiud"
 
 #: ../data/browser.xml.h:30
 msgid "Fire Engine"
@@ -148,7 +149,7 @@ msgstr "Võhumõõk"
 
 #: ../data/browser.xml.h:32
 msgid "Floral"
-msgstr "Floora"
+msgstr "Lilled"
 
 #: ../data/browser.xml.h:33
 msgid "Fossil"
@@ -180,7 +181,7 @@ msgstr "Indigo"
 
 #: ../data/browser.xml.h:40
 msgid "Leaf"
-msgstr "Leht"
+msgstr "Puuleht"
 
 #: ../data/browser.xml.h:41
 msgid "Lemon"
@@ -212,7 +213,7 @@ msgstr "Ookeanitriibud"
 
 #: ../data/browser.xml.h:48
 msgid "Onyx"
-msgstr "Onyx"
+msgstr "Oonüks"
 
 #: ../data/browser.xml.h:49
 msgid "Orange"
@@ -260,7 +261,7 @@ msgstr "Suusarajad"
 
 #: ../data/browser.xml.h:60
 msgid "Snow Ridge"
-msgstr "Lume vaod"
+msgstr "Lumevaod"
 
 #: ../data/browser.xml.h:61
 msgid "Stucco"
@@ -349,7 +350,7 @@ msgstr "Kõrvalpaani kohaldatud _taustapilt"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:9
 msgid "Date Format"
-msgstr "Kuupäevavorming"
+msgstr "Kuupäeva vorming"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:10
 msgid "Default Background Color"
@@ -686,11 +687,11 @@ msgstr ""
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:68
 msgid "Put labels beside icons"
-msgstr "Aseta sildid ikoonide kõrvale"
+msgstr "Sildid asetatakse ikoonide kõrvale"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:69
 msgid "Reverse sort order in new windows"
-msgstr "Korrasta elemendid uues aknas vastupidiselt"
+msgstr "Elemendid järjestatakse uues aknas pööratud järjestuses"
 
 #. Translators: please note this can choose the size. e.g.
 #. "Sans 15". Please do not change "Sans", only change the size if you need to. In
@@ -4084,7 +4085,7 @@ msgstr "Omaduste akna loomine"
 
 #: ../src/file-manager/fm-properties-window.c:4637
 msgid "Select Custom Icon"
-msgstr "Vali kohandatud ikoon"
+msgstr "Kohandatud ikooni valimine"
 
 #: ../src/file-manager/fm-tree-view.c:750
 msgid "E_ject"
@@ -5225,7 +5226,7 @@ msgstr "_Pilt:"
 
 #: ../src/nautilus-property-browser.c:1080
 msgid "Select an Image File for the New Emblem"
-msgstr "Vali pildifail uue embleemi jaoks"
+msgstr "Uue embleemi jaoks pildifaili valimine"
 
 #: ../src/nautilus-property-browser.c:1105
 msgid "Create a New Color:"
@@ -5268,7 +5269,7 @@ msgstr "Vabandust, kuid mustrit %s suudetud paigaldada."
 
 #: ../src/nautilus-property-browser.c:1237
 msgid "Select an Image File to Add as a Pattern"
-msgstr "Vali pildifail, mida mustrina lisada"
+msgstr "Mustriks lisatava pildifaili valimine"
 
 #: ../src/nautilus-property-browser.c:1289
 #: ../src/nautilus-property-browser.c:1320
@@ -5286,7 +5287,7 @@ msgstr "Vabandust, kuid uuele värvile tuleb määrata nimi, mis ei ole tühi."
 
 #: ../src/nautilus-property-browser.c:1374
 msgid "Select a Color to Add"
-msgstr "Vali lisatav värv"
+msgstr "Lisatava värvuse valimine"
 
 #: ../src/nautilus-property-browser.c:1411
 #: ../src/nautilus-property-browser.c:1427
@@ -5313,7 +5314,7 @@ msgstr "_Lisa uus muster..."
 
 #: ../src/nautilus-property-browser.c:2123
 msgid "_Add a New Color..."
-msgstr "_Lisa uus värv..."
+msgstr "_Lisa uus värvus..."
 
 #: ../src/nautilus-property-browser.c:2126
 msgid "_Add a New Emblem..."
@@ -5325,7 +5326,7 @@ msgstr "Mustri eemaldamiseks klõpsa sellel"
 
 #: ../src/nautilus-property-browser.c:2152
 msgid "Click on a color to remove it"
-msgstr "Värvi eemaldamiseks klõpsa sellel"
+msgstr "Värvuse eemaldamiseks klõpsa sellel"
 
 #: ../src/nautilus-property-browser.c:2155
 msgid "Click on an emblem to remove it"
@@ -5337,7 +5338,7 @@ msgstr "Mustrid:"
 
 #: ../src/nautilus-property-browser.c:2167
 msgid "Colors:"
-msgstr "Värvid:"
+msgstr "Värvused:"
 
 #: ../src/nautilus-property-browser.c:2170
 msgid "Emblems:"
@@ -5349,7 +5350,7 @@ msgstr "_Eemalda muster..."
 
 #: ../src/nautilus-property-browser.c:2193
 msgid "_Remove a Color..."
-msgstr "_Eemalda värv..."
+msgstr "_Eemalda värvus..."
 
 #: ../src/nautilus-property-browser.c:2196
 msgid "_Remove an Emblem..."
