Updated Finnish translation

--- a/po/fi.po
+++ b/po/fi.po
@@ -25,7 +25,7 @@ msgstr ""
 "Project-Id-Version: nautilus 1.1.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-07-29 08:23+0300\n"
-"PO-Revision-Date: 2006-07-29 08:23+0300\n"
+"PO-Revision-Date: 2006-09-12 10:08+0300\n"
 "Last-Translator: Ilkka Tuohela <hile@iki.fi>\n"
 "Language-Team: Finnish <gnome-fi-laatu@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
@@ -4839,11 +4839,11 @@ msgstr ""
 
 #: ../src/nautilus-history-sidebar.c:281
 msgid "History"
-msgstr "Historiikki"
+msgstr "Kansiohistoria"
 
 #: ../src/nautilus-history-sidebar.c:287
 msgid "Show History"
-msgstr "Näytä historiikki"
+msgstr "Näytä kansiohistoria"
 
 #: ../src/nautilus-image-properties-page.c:220
 msgid "Camera Brand"
@@ -5083,7 +5083,7 @@ msgstr ""
 #.
 #: ../src/nautilus-navigation-window-menus.c:116
 msgid "Are you sure you want to forget history?"
-msgstr "Haluatko varmasti tyhjentää historiikin?"
+msgstr "Haluatko varmasti tyhjentää kansiohistorian?"
 
 #: ../src/nautilus-navigation-window-menus.c:117
 msgid "If you do, you will be doomed to repeat it."
@@ -5105,7 +5105,7 @@ msgstr "Sijainti \"%s\" ei ole olemassa."
 
 #: ../src/nautilus-navigation-window-menus.c:290
 msgid "The history location doesn't exist."
-msgstr "Historiikin sijaintia ei ole olemassa."
+msgstr "Kansiohistorian sijaintia ei ole olemassa."
 
 #: ../src/nautilus-navigation-window-menus.c:426
 msgid "_Go"
@@ -5147,7 +5147,7 @@ msgstr "Anna avattava sijainti"
 
 #: ../src/nautilus-navigation-window-menus.c:437
 msgid "Clea_r History"
-msgstr "T_yhjennä historiikki"
+msgstr "T_yhjennä kansiohistoria"
 
 #. name, stock id, label
 #: ../src/nautilus-navigation-window-menus.c:438
@@ -5242,7 +5242,7 @@ msgstr "Siirry edelliseen sijaintiin"
 
 #: ../src/nautilus-navigation-window-menus.c:497
 msgid "Back history"
-msgstr "Takaisin historiikissa"
+msgstr "Takaisin kansiohistoriassa"
 
 #: ../src/nautilus-navigation-window-menus.c:511
 msgid "_Forward"
@@ -5254,7 +5254,7 @@ msgstr "Siirry seuraavaan sijaintiin"
 
 #: ../src/nautilus-navigation-window-menus.c:514
 msgid "Forward history"
-msgstr "Eteenpäin historiikissa"
+msgstr "Eteenpäin kansiohistoriassa"
 
 #: ../src/nautilus-navigation-window.c:177
 msgid "Toggle between button and text-based location bar"
@@ -6301,7 +6301,7 @@ msgstr "Katsele verkkopalvelimia Nautilus-tiedostonhallintaohjelmalla"
 #~ msgstr "CD-kirjoitinta ei voi käynnistää"
 
 #~ msgid "Clear History"
-#~ msgstr "Tyhjennä historiikki"
+#~ msgstr "Tyhjennä kansiohistoria"
 
 #~ msgid "Home"
 #~ msgstr "Koti"
