--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-09-14  Christian Neumair  <chris@gnome-de.org>
+
+	* libnautilus-private/nautilus-metafile.c: Handle CORBA errors.
+	Fixes #46664.
+
 2006-09-13  Martin Wehner  <martin.wehner@gmail.com>
 
 	* src/nautilus-places-sidebar.c:
