Translation updated by Wouter Bolsterlee.
2006-09-15  Wouter Bolsterlee  <wbolster@gnome.org>

	* nl.po: Translation updated by Wouter Bolsterlee.

--- a/po/nl.po
+++ b/po/nl.po
@@ -19,13 +19,16 @@
 # dat oude strings met wellicht incorrecte vertalingen (er is een hoop
 # veranderd de laatste tijd, toch?) toch weer opduiken. (Wouter Bolsterlee)
 #
+# Op 15 september 2006 is het cd/dvd-gedoe definitief beslist: het is vanaf
+# heden "cd/dvd branden". (Wouter Bolsterlee)
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: Nautilus\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2006-09-03 21:38+0200\n"
-"PO-Revision-Date: 2006-09-03 23:01+0200 \n"
-"Last-Translator: Reinout van Schouwen <reinouts@gnome.org>\n"
+"POT-Creation-Date: 2006-09-15 16:17+0200\n"
+"PO-Revision-Date: 2006-09-15 16:17+0200 \n"
+"Last-Translator: Wouter Bolsterlee <uws+gnome@xs4all.nl>\n"
 "Language-Team: Dutch <vertaling@vrijschrift.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1901,7 +1904,7 @@ msgstr "Thema's"
 
 #: ../libnautilus-private/nautilus-file-utilities.c:566
 msgid "CD/DVD Creator"
-msgstr "Cd/dvd-werkplaats"
+msgstr "Cd/dvd branden"
 
 #: ../libnautilus-private/nautilus-file-utilities.c:568
 msgid "Windows Network"
@@ -5044,7 +5047,7 @@ msgstr "Openen met %s"
 
 #: ../src/nautilus-information-panel.c:1001
 msgid "Unable to launch the cd burner application."
-msgstr "Kan de CD-brandertoepassing niet starten."
+msgstr "Kan de cd-brandertoepassing niet starten."
 
 #. FIXME: We don't use spaces to pad labels!
 #: ../src/nautilus-information-panel.c:1046
@@ -5054,7 +5057,7 @@ msgstr "_Prullenbak legen"
 #. FIXME: We don't use spaces to pad labels!
 #: ../src/nautilus-information-panel.c:1062
 msgid "_Write contents to CD"
-msgstr "In_houd naar CD schrijven"
+msgstr "In_houd naar cd schrijven"
 
 #: ../src/nautilus-location-bar.c:60
 msgid "Go To:"
@@ -6045,12 +6048,12 @@ msgstr "Naar de prullenbak-map gaan"
 #. name, stock id
 #: ../src/nautilus-window-menus.c:687
 msgid "CD/_DVD Creator"
-msgstr "Cd/_dvd-werkplaats"
+msgstr "Cd/_dvd branden"
 
 #. label, accelerator
 #: ../src/nautilus-window-menus.c:688
 msgid "Go to the CD/DVD Creator"
-msgstr "Naar de cd/dvd-werkplaats gaan"
+msgstr "Een cd of dvd branden"
 
 #: ../src/nautilus-window-menus.c:714
 msgid "_Up"
